syntax = "proto3";

package api.car;

option go_package="github.com/synerex/synerex_alpha/api/simulation/agent";

message Car {
    CarStatus status = 1;
}

message CarStatus {
    string name = 1;
}
